# sachyo

./: README.md  pyproject.toml
src/: main.py
src/adapters/: __init__.py  auction.py  base.py  coupang.py  demo.py  elevenst.py  gmarket.py  interpark.py  lotteon.py  naver_smartstore.py  ssg.py  tmon.py  wemakeprice.py
src/core/: logging_utils.py  models.py  pipeline.py  progress.py  report.py  similarity.py  storage.py  verify.py
src/ui/: __init__.py  app.py  config_store.py
tests/: test_adapters_registry.py  test_pipeline_demo.py  test_progress.py  test_similarity_verify.py  test_ui_config_store.py
