[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sachyo"
version = "0.1.0"
description = "Product image-based Korean shopping listing explorer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "playwright>=1.45.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "pandas>=2.2.0",
  "tqdm>=4.66.0",
  "requests>=2.32.0",
  "Pillow>=10.3.0",
  "imagehash>=4.3.1",
  "numpy>=1.26.0",
  "opencv-python>=4.9.0.80",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
excel = ["openpyxl>=3.1.0"]
ui = ["streamlit>=1.36.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]
